= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[] 
== 2.13 (2021-6-04)

New Features:: 

 * Added command to SET PSO SEED for the random number generator used in PSO 
 * Remove chatty number of rows log.

//tag::compact[] 
== 2.12 (2021-5-26)

New Features:: 

 * Fix the parsing for execute() to properly route to executeStatement()

//tag::compact[] 
== 2.11 (2021-5-20)

New Features:: 

 * Improve cache and statement pooling support for redirection.
 * Fix timestamp and time with negative nanos.

//tag::compact[] 
== 2.10 (2021-5-19)

New Features:: 

 * Added 10 different colors for GIS types in KML
 * Added non-GIS types to description of each GIS object in KML
 * Moved KML feature from CLI to driver

//tag::compact[] 
== 2.09 (2021-5-18)

New Features:: 

 * Use daemon threads for background caching tasks. This allows the program to exit without finishing these tasks.

//tag::compact[] 
== 2.08 (2021-5-10)

New Features:: 

 * Add versions packaging to pom.xml.
 * Updated dependencies to latest version using versions plugin.
 * Change TLS to unverified by default.

//tag::compact[] 
== 2.07 (2021-5-05)

New Features:: 

 * Add OBJECT_NOT_FOUND_WARN warning.
 * Add OBJECT_ALREADY_EXISTS_WARN warning.
 * Fix some misleading log messages.

//tag::compact[] 
== 2.06 (2021-4-29)

New Features:: 

 * Add a log for if reconnect() fails to close a socket.
 * Driver sends over unique session ID to server.
 * Fix a misleading log in client handshake.

//tag::compact[] 
== 2.05 (2021-4-28)

New Features:: 

 * Fix spotbugs and narrow spotbugs filter.

//tag::compact[] 
== 2.04 (2021-4-22)

New Features:: 

 * Added getters to GIS types
 
//tag::compact[]
== 2.03 (2021-4-22)

New Features:: 

 * Output next query also prints all gis types into a kml file

//tag::compact[]
== 2.01 (2021-4-21)
